--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -64,7 +64,7 @@ dependencies:
   # hl7.fhir.uv.ips: current
   # hl7.fhir.uv.ips: 1.1.0
   # de.basisprofil.r4: 1.4.0
-  de.basisprofil.r4: 1.5.0-ballot2
+  de.basisprofil.r4: 1.5.3
   de.gematik.isik-basismodul: 4.0.0-rc2
   de.gematik.isik-medikation: 4.0.0-rc2
   de.gematik.isik-vitalparameter: 4.0.2
